Fix position of slider buttons on tablet version

--- a/source/sass/blocks/swiper.scss
+++ b/source/sass/blocks/swiper.scss
@@ -236,7 +236,7 @@
   }
 
   @media (min-width: $tablet-width) {
-    top: -16px;
+    top: -52px;
     left: 0;
   }
 
@@ -269,7 +269,7 @@
   }
 
   @media (min-width: $tablet-width) {
-    top: -16px;
+    top: -52px;
     right: 0;
   }
 
